Azure portal interface changes-related updates

--- a/Instructions/20533C_LAB_AK_11.md
+++ b/Instructions/20533C_LAB_AK_11.md
@@ -15,9 +15,11 @@
 
 5. In the hub menu, click **+ New**, and then click **Monitoring + Management**.
 
-6. On the **Monitoring + Management** blade, click **Automation**.
+6. Click **Automation**.
 
-7. On the Add Automation Account blade, specify the following:
+7. On the **Automation** blade, click **Create**.
+
+8. On the Add Automation Account blade, specify the following:
 
 
   - Name: **LabAutomationAccount**
@@ -31,9 +33,9 @@
   - Create Azure Run As account: **Yes**
 
 
-8. Click **Create**.
+9. Click **Create**.
 
-9. Wait for the Automation account to be provisioned. This should take less than a minute.
+10. Wait for the Automation account to be provisioned. This should take less than a minute.
 
 
 #### Task 2: Create and review Automation assets
@@ -42,15 +44,11 @@
 
 2. On the Automation Accounts blade, click **LabAutomationAccount**.
 
-3. On the LabAutomationAccount blade click the **ASSETS** tile.
+3. On the LabAutomationAccount blade click **Variables**.
 
-4. On the **Assets** blade, notice that you have several Windows PowerShell modules included in your account by default.
+4. Click **Add a variable**.
 
-5. Click the **Variables** tile.
-
-6. On the **Variables** blade, click **Add a variable**.
-
-7. On the **New Variable** blade, specify the following and click **Create**:
+5. On the **New Variable** blade, specify the following and click **Create**:
 
   - Name: **VM0**
 
@@ -62,7 +60,7 @@
 
   - Encrypted: **No**
 
-8. Repeat the steps 6 and 7 to create additional two non-encrypted string variables. For each variable, specify the following name, description and value::
+6. Repeat the steps 4 and 5 to create additional two non-encrypted string variables. For each variable, specify the following name, description and value::
 
   - Name: **VM1**
 
@@ -70,20 +68,17 @@
 
   - Value: **myVM1**
 
-
   - Name: **ResourceGroup**
 
   - Description: **VM resource group**
 
   - Value: **20533C1101-LabRG**
 
+7. Click  **Schedules**.
 
-9. Scroll back to the **Assets** blade and click the **Schedules** tile.
+8. Click **Add a schedule**.
 
-10. On the **Schedules** blade, click **Add a schedule**.
-
-11. On the **New Schedule** blade, specify the following and click **Create**:
-
+9. On the **New Schedule** blade, specify the following and click **Create**:
 
   - Name: **EndOfDay**
 
@@ -97,14 +92,9 @@
 
   - Set expiration: **No**
 
+10. Click **Connections**. 
 
-12. Close the Schedules blade.
-
-13. Click **Connections**. 
-
-14. Note two precreated connections **AzureClassicRunAsConnection** and **AzureRunAsConnection**. They were created automatically during provisioning of the Automation account since you selected the option to create the Azure Run As account.
-
-15. Close the Assets blade.
+11. Note two precreated connections **AzureClassicRunAsConnection** and **AzureRunAsConnection**. They were created automatically during provisioning of the Automation account since you selected the option to create the Azure Run As account.
 
 
 > **Result**: After completing this exercise, you should have configured a new Microsoft Azure Automation account and created Automation assets.
