co-administrator no more available in classic portal.

--- a/Instructions/20533C_LAB_01.md
+++ b/Instructions/20533C_LAB_01.md
@@ -34,7 +34,7 @@ A. Datum Corporation wants to expand their cloud presence by taking advantage of
   
 ### Scenario
   
-You have been asked to explore the available browser-based Azure portals to assess how A. Datum Corporation will use them. In the Azure classic portal, you must create a co-administrator account and confirm the domain name of your subscription for use in your testing.
+You have been asked to explore the available browser-based Azure portals to assess how A. Datum Corporation will use them. In the Azure classic portal, you must confirm the domain name of your subscription for use in your testing.
 In the Azure portal, you must observe the organization of resources and customize the interface to make your testing environment more accessible. In the account page of the Azure portal, you must view and download your current billing data and sign up for an available preview feature that you will use later in your testing.
 
  The main tasks for this exercise are as follows:
@@ -51,11 +51,9 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 2. Start Internet Explorer, browse to the Azure classic portal. Sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. In the Azure classic portal, grant the Co-Administrator privileges to valid Microsoft account.
+3. In the Azure classic portal, view the default Azure Active Directory (AD) tenant and note the user account you just added. 
 
-4. In the Azure classic portal, view the default Azure Active Directory (AD) tenant and note the user account you just added. 
-
-5. View the default domain name associated with your Azure AD tenant.
+4. View the default domain name associated with your Azure AD tenant.
 
 #### Task 2: Use the Azure portal
 
@@ -92,7 +90,7 @@ In the Azure portal, you must observe the organization of resources and customiz
   
 ### Scenario
   
-You have been asked to create some temporary resources in Azure to test the management capabilities available via the Azure portal. You must create a resource group in Azure, create a new resource in that resource group, assign a tag to to each, and finally grant access to both by using Role Based Acces Control. Your intention is to apply permissions on the resource group level, rather than relying on the subscription-wide Co-Administrator privileges you granted in the previous exercise.
+You have been asked to create some temporary resources in Azure to test the management capabilities available via the Azure portal. You must create a resource group in Azure, create a new resource in that resource group, assign a tag to to each, and finally grant access to both by using Role Based Acces Control. Your intention is to apply permissions on the resource group level.
 
 
 The main tasks for this exercise are as follows:
@@ -108,7 +106,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Create and manage a resource group
 
-1. In Internet Explorer, browse to the Azure portal. If prompted, sign in by using the Microsoft account that is the Service Administrator or Co-Administrator of your Azure subscription.
+1. In Internet Explorer, browse to the Azure portal. If prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 2. In the Azure portal, create a new resource group with the following settings:
 
@@ -146,13 +144,7 @@ The main tasks for this exercise are as follows:
   
 1. In the Azure portal, navigate to the **20533C0101-LabRG** resource group.
 
-2. From the resource group blade, grant the **Owner** role to the user account you created in your Azure AD tenant in the first exercise of this lab.
-
-3. Start Internet Explorer and browse to the Azure classic portal. 
-
-4. Revoke Co-administrator privileges from the account you added to your Azure AD tenant in the first exercise. 
-
->  Note that in this particular case, the account you are using is already a co-administrator, which is not a subject to RBAC. Revoking the Co-Administrator privileges from the account will allow for RBAC to take effect. Revoking the Co-Administrator privileges does not remove the account from the Azure AD tenant associated with your subscription.
+2. From the resource group blade, grant the **Owner** role to a valid Microsoft account.
 
 >  **Result**: After completing this exercise, you should have used the Azure Resource Manager features in the Azure portal.
 
