co-administrator no more available in classic portal.

--- a/Instructions/20533C_LAB_AK_01.md
+++ b/Instructions/20533C_LAB_AK_01.md
@@ -9,21 +9,15 @@
 
 2. Start Internet Explorer, browse to **https://manage.windowsazure.com**, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. On the Azure classic portal page, in the navigation bar on the left hand side, scroll down, and then click **SETTINGS**.
+3. On the Azure classic portal page, in the navigation bar on the left hand side, scroll down, and then click **ACTIVE DIRECTORY**.
 
-4. On the settings page, click **ADMINISTRATORS**, and then at the bottom of the pane, click **ADD**.
+4. In the active directory pane, click **Default Directory**. This is the default Azure Active Directory (Azure AD) instance for your subscription
 
-5. In the **EMAIL ADDRESS** box, type a valid Microsoft account, select the check box next to your subscription name, and then click the check mark icon.
+5. If prompted, on the **Let’s talk about Azure AD** page, deselect all checkboxes and then click the checkmark at the bottom of the page.
 
-6. On the Azure classic portal page, in the navigation bar, click **ACTIVE DIRECTORY**.
+6. On the **default directory** page, click **USERS**. Note the two accounts that are listed: your account and the co-administrator account you created earlier.
 
-7. In the active directory pane, click **Default Directory**. This is the default Azure Active Directory (Azure AD) instance for your subscription
-
-8. If prompted, on the **Let’s talk about Azure AD** page, deselect all checkboxes and then click the checkmark at the bottom of the page.
-
-9. On the **default directory** page, click **USERS**. Note the two accounts that are listed: your account and the co-administrator account you created earlier.
-
-10. On the **default directory** page, click **DOMAINS**. Note the name of the default domain for your subscription displayed on the **default directory** page.
+7. On the **default directory** page, click **DOMAINS**. Note the name of the default domain for your subscription displayed on the **default directory** page.
 
 #### Task 2: Use the Azure portal
 
@@ -135,19 +129,7 @@
 
 5. On the **Add permissions** blade, in the Role drop-down list, click **Owner**.
 
-6. On the **Add permissions** blade, click the name of the user you added earlier as a Co-Administrators of your subscription and click **Save**. Note that, once the change is saved, the user is listed as the owner.
-
-7. Start Internet Explorer, browse to **https://manage.windowsazure.com**, and, if prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
-
-8. On the Azure classic portal page, in the navigation bar, scroll down, and then click **SETTINGS**.
-
-9. On the settings page, click **ADMINISTRATORS**.
-
-10. Click the Microsoft account you added in the first exercise of this lab as a Co-Administrator and then, at the bottom of the pane, click **REMOVE**.
-
-11. When prompted to confirm, click **YES** 
-
->  Note that in this particular case, the account you are using is already a co-administrator, which is not a subject to RBAC. Revoking the Co-Administrator privileges from the account will allow for RBAC to take effect. Revoking the Co-Administrator privileges does not remove the account from the Azure AD tenant associated with your subscription.
+6. On the **Add permissions** blade, enter a valid Microsoft account name and click **Save**. Note that, once the change is saved, the user is listed as the owner.
 
 >  **Result**: After completing this exercise, you should have used the Azure Resource Manager features in the Azure portal.
 
