New step in the Azure AD Connect setup
The interface has changed to enable admin to create the sync account during setup.

--- a/Instructions/20533C_LAB_AK_10.md
+++ b/Instructions/20533C_LAB_AK_10.md
@@ -143,7 +143,9 @@
   - PASSWORD: **Pa55w.rd**
 
 
-1. On the **Connect your directories** page, verify that the **adatum.com** forest is selected, under user name, type **ADATUM\\Student** with the password **Pa55w.rd1234**, click **Add Directory**, and click **Next**.
+1. On the **Connect your directories** page, verify that the **adatum.com** forest is selected and click **Add Directory**
+
+2. On the **AD Forest Account** window, under user name, type **ADATUM\\Student** with the password **Pa55w.rd1234**, click **OK**, and click **Next**.
 
 2. On the **Azure AD sign-in configuration**, note the message **Users will not be able to sign-in Azure AD using their on-premises credentials**. This is expected since you do not have a verified domain name. Enable the **Continue without any verified domains** checkbox and click **Next**.
 
