Changes to steps for restoring deleted databases

--- a/Instructions/20533C_LAB_AK_07.md
+++ b/Instructions/20533C_LAB_AK_07.md
@@ -300,27 +300,23 @@ Connection Timeout=30;
 
 2. On the **SQL servers** blade, click the entry representing the SQL server you created in this lab.
 
-3. On the server blade, on the **Overview** page, click **+New database**
+3. On the server blade, click **Deleted databases**
 
 4. On the **SQL database** blade, in the **Database name** box, type **operations**.
 
-5. In the **Select source** drop-down list, click **Backup**.
+5. In the list of deleted databases, click **operations**.
 
-6. Click **Backup - Configure required settings**.
+6. Accept the remaining settings with their default values and click **OK**. Wait for the operation to complete by monitoring the notification area (this can take several minutes).
 
-7. On the **Backups** blade, click **operations**.
+7. In SQL Server Management Studio, in Object Explorer, under your Azure SQL Database server, right-click the **Databases** folder and click **Refresh** to verify that the operations database has been restored.
 
-8. Accept the remaining settings with their default values and click **OK**. Wait for the operation to complete by monitoring the notification area (this can take several minutes).
-
-9. In SQL Server Management Studio, in Object Explorer, under your Azure SQL Database server, right-click the **Databases** folder and click **Refresh** to verify that the operations database has been restored.
-
-10 In SQL Server Management Studio, click **New Query** and enter the following Transact-SQL code in the new query pane:
+8. In SQL Server Management Studio, click **New Query** and enter the following Transact-SQL code in the new query pane:
 
   ```
   SELECT * FROM dbo.serverlist
   ```
 
-11. On the toolbar, in the drop-down list of availabile databases, ensure that **operations** is selected and then click **Execute**.
+9. On the toolbar, in the drop-down list of availabile databases, ensure that **operations** is selected and then click **Execute**.
 
 12. View the query results and verify that a list of three servers and their IP addresses is returned.
 
