--- a/Instructions/20533C_LAB_AK_08.md
+++ b/Instructions/20533C_LAB_AK_08.md
@@ -194,7 +194,7 @@
  
 7. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
 
-8. In the **Choose File to Upload** dialog box, browse to D:\LabFiles\Lab08\Starter\Production\Package.
+8. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
 9. Click **AdatumAds.cspkg**, and then click **Open**.
 
