--- a/Instructions/20533C_LAB_AK_05.md
+++ b/Instructions/20533C_LAB_AK_05.md
@@ -231,7 +231,7 @@
 
 7. Wait until swap operation completes.
 
-8. On the web app blade, in the **Essentials** section, click the URL link for your web app. Notice that the color scheme has changed. 
+8. On the web app blade, in the **Essentials** section (expanded by defalt and not visible), click the URL link for your web app. Notice that the color scheme has changed. 
 
 9. Close the tab that displays the A. Datum's web app.
 
@@ -287,7 +287,7 @@ Note the name of your original web app and its location.
 
 6. At the Windows PowerShell prompt, type the following command (where the _'webappname2'_ is a unique name that you will assign to a new web app you will create in the _'SecondLocation'_ in the next step), and then press Enter:
   ```
-  Test-AzureRmDnsAvailability -DomainNameLabel 'webapp' -Location $rg2.Location
+  Test-AzureRmDnsAvailability -DomainNameLabel 'webappname2' -Location $rg2.Location
   ```
 Verify that the command returns **True**. If not, keep re-running the same command but with different values of the **-DomainNameLabel** parameter.
 
