--- a/Instructions/20533C_LAB_AK_06.md
+++ b/Instructions/20533C_LAB_AK_06.md
@@ -74,7 +74,7 @@
 
 #### Task 3: Use AzCopy to upload blobs
   
-1. In the **Administrator: Windows PowerShell ISE** window, in the script pane, type:
+1. In the **Administrator: Windows PowerShell ISE** window, in the script pane, type the following.  Do not execute it.  You will complete this script in the following steps.
   ```
   .\AzCopy /Dest:https://<Your-storage-account>.blob.core.windows.net/asset-images /destkey:<Your-access-key> /Source:D:\Labfiles\Lab06\Starter\asset-images
   ```
