--- a/Instructions/20533C_LAB_AK_07.md
+++ b/Instructions/20533C_LAB_AK_07.md
@@ -70,8 +70,10 @@
 
 
 #### Task 3: Use SQL Server Management Studio
-  
-1. On MIA-CL1, right click **SQL Server Management Studio** icon in the taskbar, in the right-click menu, click **Microsoft SQL Server Management Studio** and then click **Run as administrator**. When prompted, in the **User account control** dialog box, click **Yes**. If prompted by the message **Microsoft (R) Visual Studio Isolated Shell has been changed. Microsoft SQL Server Management Studio settings need to be reset for compatibility**, click **OK**. 
+
+> **Note**: Due to updates in the Azure SQL offerring, some of the following tasks require the installation of **SQL Server Management Studio** (SSMS) version 17.2 or greater.  SSMS 17.2 can be found here: https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms.  After installation, a restart may be required.  The task bar icon will NOT be updated to point to the new installation of SSMS 17. 
+
+1. On MIA-CL1, click the Windows Start button, type **SQL Server Management Studio 17**, right click **SQL Server Management Studio 17** and then click **Run as administrator**. When prompted, in the **User account control** dialog box, click **Yes**. If prompted by the message **Microsoft (R) Visual Studio Isolated Shell has been changed. Microsoft SQL Server Management Studio 17 settings need to be reset for compatibility**, click **OK**. 
 
 2. In the **Connect to Server** dialog box, specify the following settings (replacing **_server_name_** with the unique name you specified when creating your Azure SQL Database server), and click **Connect**:
 
@@ -87,9 +89,9 @@
   - Password: **Pa55w.rd**
 
 
-3. In SQL Server Management Studio, in the Object Explorer, under the server name expand **Databases**, and verify that the **operations** database appears in the list of databases.
+3. In SQL Server Management Studio 17, in the Object Explorer, under the server name expand **Databases**, and verify that the **operations** database appears in the list of databases.
 
-4. In SQL Server Management Studio, click **File** menu, click **Open**, and then click **File**.
+4. In SQL Server Management Studio 17, click **File** menu, click **Open**, and then click **File**.
 
 5. In the **Open File** dialog box, browse to the D:\\Labfiles\\Lab07\\Starter folder, click the **Operations.sql** file and click **Open**. Review the Transact-SQL code it contains.
 
@@ -157,7 +159,7 @@
   
 #### Task 1: Deploy a database to Azure
   
-1. In SQL Server Management Studio, in Object Explorer, click **Connect** and, in the **Connect** drop-down list, click **Database Engine**.
+1. In **SQL Server Management Studio 17**, in Object Explorer, click **Connect** and, in the **Connect** drop-down list, click **Database Engine**.
 
 2. In the **Connect to Server** dialog box, specify the following settings, and click **Connect**:
 
@@ -169,9 +171,9 @@
   - Authentication: **Windows Authentication**
 
 
-3. In SQL Server Management Studio, in Object Explorer, under the **MIA-CL1** server, expand **Databases** and verify that the **sales** database is listed.
+3. In SQL Server Management Studio 17, in Object Explorer, under the **MIA-CL1** server, expand **Databases** and verify that the **sales** database is listed.
 
-4. Right-click the **sales** database, point to **Tasks**, and then click **Deploy Database to Microsoft Azure SQL Database**.
+4. Right-click the **sales** database, point to **Tasks**, and then click **Deploy Database to Microsoft Azure SQL Database...**.
 
 5. In the **Deploy Database 'sales'** wizard, on the **Introduction** page, click **Next**.
 
@@ -195,13 +197,13 @@
 
 9. On the **Results** page, verify that the operation completed successfully, and click **Close**.
 
-10. In SQL Server Management Studio, in Object Explorer, if necessary, right-click the **Databases** folder under your Azure SQL Database server and click **Refresh** to verify that the sales database has been copied to this server.
+10. In SQL Server Management Studio 17, in Object Explorer, if necessary, right-click the **Databases** folder under your Azure SQL Database server and click **Refresh** to verify that the sales database has been copied to this server.
 
 
 
 #### Task 2: Configure SQL Database security
   
-1. In SQL Server Management Studio, in Object Explorer, under your Azure SQL Database server, expand **Security**, expand **Logins**, and verify that only the **Student** login is listed.
+1. In SQL Server Management Studio 17, in Object Explorer, under your Azure SQL Database server, expand **Security**, expand **Logins**, and verify that only the **Student** login is listed.
 
 2. Right-click **Logins** and click **New Login**. Then, replace the auto-generated Transact-SQL script with the one shown here and then click **Execute**:
 
@@ -228,7 +230,7 @@ GO
 
 6. In Object Explorer, right-click the **Users** folder and click **Refresh** to verify that the **SalesApp** user has been created.
 
-7. Keep SQL Server Management Studio open for the next exercise.
+7. Keep SQL Server Management Studio 17 open for the next exercise.
 
 
 
@@ -308,9 +310,9 @@ Connection Timeout=30;
 
 6. Accept the remaining settings with their default values and click **OK**. Wait for the operation to complete by monitoring the notification area (this can take several minutes).
 
-7. In SQL Server Management Studio, in Object Explorer, under your Azure SQL Database server, right-click the **Databases** folder and click **Refresh** to verify that the operations database has been restored.
+7. In SQL Server Management Studio 17, in Object Explorer, under your Azure SQL Database server, right-click the **Databases** folder and click **Refresh** to verify that the operations database has been restored.
 
-8. In SQL Server Management Studio, click **New Query** and enter the following Transact-SQL code in the new query pane:
+8. In SQL Server Management Studio 17, click **New Query** and enter the following Transact-SQL code in the new query pane:
 
   ```
   SELECT * FROM dbo.serverlist
