--- a/Instructions/20533C_LAB_07.md
+++ b/Instructions/20533C_LAB_07.md
@@ -105,7 +105,9 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
 
 #### Task 3: Use SQL Server Management Studio
-  
+
+> **Note**: Due to updates in the Azure SQL offerring, some of the following tasks require the installation of **SQL Server Management Studio** (SSMS) version 17.2 or greater.  SSMS 17.2 can be found here: https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms.  After installation, a restart may be required.  The task bar icon will NOT be updated to point to the new installation of SSMS 17. 
+
 1. On MIA-CL1, start SQL Server 2016 Management Studio as Administrator and connect to the Azure SQL server with the following settings:
 
 
