--- a/Instructions/20533C_LAB_AK_07.md
+++ b/Instructions/20533C_LAB_AK_07.md
@@ -71,7 +71,7 @@
 
 #### Task 3: Use SQL Server Management Studio
 
-> **Note**: Due to updates in the Azure SQL offerring, some of the following tasks require the installation of **SQL Server Management Studio** (SSMS) version 17.2 or greater.  SSMS 17.2 can be found here: https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms.  After installation, a restart may be required.  The task bar icon will NOT be updated to point to the new installation of SSMS 17. 
+> **Note**: Due to updates in the Azure SQL offering, some of the following tasks require the installation of **SQL Server Management Studio** (SSMS) version 17.2 or greater.  SSMS 17.2 can be found here: https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms.  After installation, a restart may be required.  The task bar icon will NOT be updated to point to the new installation of SSMS 17. 
 
 1. On MIA-CL1, click the Windows Start button, type **SQL Server Management Studio 17**, right click **SQL Server Management Studio 17** and then click **Run as administrator**. When prompted, in the **User account control** dialog box, click **Yes**. If prompted by the message **Microsoft (R) Visual Studio Isolated Shell has been changed. Microsoft SQL Server Management Studio 17 settings need to be reset for compatibility**, click **OK**. 
 
