--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -317,7 +317,7 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
 4. On the **Add an application** blade, in the search box, type **Microsoft**.
 
-5. Click **Microsoft Account (Windows Live)** and click **Add**. Wait till the application gets added.
+5. Click **Microsoft Account (Windows Live)** and enter **Microsoft Account (Windows Live)** as the name, then click **Add**. Wait till the application gets added.
 
 6. On the **Microsoft Account (Windows Live) - Quick start** blade, click **Configure single sign-on (required)**. 
 
