--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -341,7 +341,7 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
 16. Scroll back to the **Add an application** blade, in the search box, type **Skype**.
 
-17. Click **Skype** and click **Add**. Wait till the application gets added.
+17. Click **Skype** and enter **Skype** as the name, then click **Add**. Wait till the application gets added.
 
 18. On the **Skype - Quick start** blade, click **Configure single sign-on (required)**. 
 
