--- a/Instructions/20533C_LAB_AK_05.md
+++ b/Instructions/20533C_LAB_AK_05.md
@@ -217,7 +217,7 @@
 
 #### Task 2: Swap deployment slots
   
-1. In the Azure portal, navigate to the web app blade and, in the **Essentials** section, click the **URL** link for your web app. This will open another tab in the Internet Exploer window. Note the color scheme.
+1. In the Azure portal, navigate to the web app blade and, in the **Essentials** section, click the **URL** link for your web app. This will open another tab in the Internet Explorer window. Note the color scheme.
 
 2. Close the tab that displays the A. Datum web app.
 
