Updates file locations
E drive instead of D drive, and projects folder instead of resdev folder.

--- a/Instructions/20533D_LAB_03.md
+++ b/Instructions/20533D_LAB_03.md
@@ -81,7 +81,7 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, open a Windows PowerShell ISE window as Administrator
 
-2. In the Windows PowerShell ISE, open the script **D:\\Labfiles\\Lab03\\Starter\\New-AzureRm20533D03VM.ps1** and review its content.
+2. In the Windows PowerShell ISE, open the script **E:\\Labfiles\\Lab03\\Starter\\New-AzureRm20533D03VM.ps1** and review its content.
 
 3. Run the script. 
 
@@ -194,7 +194,7 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, start Visual Studio. If prompted, sign in with your Microsoft account credentials. If prompted to create configure Visual Studio Team Services account, click **Not now, maybe later**.
 
-2. In Visual Studio, open the solution **ResDevLinuxDeploy.sln** from E:\\Labfiles\\Lab03\\Starter\\ResDev\\ResDevLinuxDeploy. 
+2. In Visual Studio, open the solution **ResDevLinuxDeploy.sln** from E:\\Labfiles\\Lab03\\Starter\\Projects\\ResDevLinuxDeploy. 
 
 3. View the contents of the **azuredeploy.json** template.
 
