Create new publishing profile
Updated instruction on the publishing page to import the publishing profile.

--- a/Instructions/20533D_LAB_AK_05.md
+++ b/Instructions/20533D_LAB_AK_05.md
@@ -135,7 +135,7 @@
 
 2. In the Solution Explorer, right-click the **AdatumWebsite** project, and then click **Publish**.
 
-3. On the Publish page, click the right pointing arrow head.
+3. On the Publish page, click **Create new profile**.
 
 4. In the list of publishing options, click **Import Profile** and then click **Publish**. 
 
