Traffic manager profile blade
Click on Configuration in the Traffic manager profile blade instead of web app blade.

--- a/Instructions/20533D_LAB_AK_05.md
+++ b/Instructions/20533D_LAB_AK_05.md
@@ -361,7 +361,7 @@
 
 11. Repeat steps 4 through 10 to add the second endpoint for the web app that you created in Exercise 4. Use the name of the second web app as the name of the endpoint.
 
-12. On the web app blade, click **Configuration**.
+12. On the traffic manager profile blade, click **Configuration**.
 
 13. On the Traffic Manager configuration blade, in the **DNS time to live (TTL)** text box, replace the default value by typing **30** and press **Enter**.
 
