--- a/Instructions/20533D_LAB_04.md
+++ b/Instructions/20533D_LAB_04.md
@@ -186,7 +186,7 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, start File Explorer and browse to the E:\\Labfiles\\Lab04\\Starter folder.
 
-2. In the E:\\Labofiles\\Lab04\\Starter folder, right-click on the **IISInstall.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE**.
+2. In the E:\\Labfiles\\Lab04\\Starter folder, right-click on the **IISInstall.ps1** file and select **Edit** from the right-click menu. This will open the file in the **Windows PowerShell ISE**.
 
 3. Review the content of the file. Note that this is a DSC configuration that controls the installation of the Windows Server 2016 Web-Server role. 
 
