--- a/Instructions/20533D_LAB_AK_04.md
+++ b/Instructions/20533D_LAB_AK_04.md
@@ -318,7 +318,7 @@
 
 #### Task 2: Configure a Storage Spaces simple volume
   
-1. On MIA-CL1, in the Azure portal, on the 20533D0401-LabRG blade, click **Overview**.
+1. On MIA-CL1, in the Azure portal, on the 20533D0401-vm2 virtual machine blade, click **Overview**.
 
 2. In the toolbar, click **Connect**.
 
