--- a/Instructions/20533D_LAB_AK_05.md
+++ b/Instructions/20533D_LAB_AK_05.md
@@ -180,22 +180,19 @@
 
 10. In Solution Explorer, right-click the **AdatumWebsite** project, and then click **Publish**.
 
-11. On the Publish page, click the right pointing arrow head.
+11. In the list of publishing options, click **Import Profile** and then click **Publish**.  If **Import Profile** is not listed, you may need to click the right pointing arrow head to display additional publishing options. 
 
-12. In the list of publishing options, click **Import Profile** and then click **Publish**. 
+12. In the **Import Publish Settings** dialog box, browse to the **Downloads** folder.
 
-13. In the **Import Publish Settings** dialog box, browse to the **Downloads** folder.
+13. Select the **.PublishSettings** file that you downloaded in step 5 of this task, and then click **Open**.
 
-14. Select the **.PublishSettings** file that you downloaded in step 5 of this task, and then click **Open**.
+14. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in the first exercise and open a new tab in the Microsoft Edge window displaying it.
 
-15. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in the first exercise and open a new tab in the Microsoft Edge window displaying it.
+15. Verify that A. Datum's web app is open in a new Microsoft Edge tab and verify the web app's URL.
 
-16. Verify that A. Datum's web app is open in a new Microsoft Edge tab and verify the web app's URL.
+16. Close the new Microsoft Edge tab.
 
-17. Close the new Microsoft Edge tab.
-
-
-18. Leave Visual Studio open.
+17. Leave Visual Studio open.
 
 
 #### Task 2: Swap deployment slots
