--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -133,7 +133,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
   docker-machine env 20533d0702-vm0
   ```
 
-2. Review the output returned by the docker-machine env command. Next, in the **Administrator: Command Prompt** window, type the following, and then press Enter: 
+2. Review the output returned by the docker-machine env command. Next, in the **Administrator: Command Prompt** window, type the following, and then press Enter (it will not produce any output): 
   ```
   FOR /f "tokens=*" %i IN ('docker-machine env 20533d0702-vm0') DO @%i
   ```
@@ -263,7 +263,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
   - Admin user: **Enable** (this allows you to use the registry name as username and admin user access key as password to docker login to the registry)
 
-  - SKU : **Basic (Preview)**
+  - SKU : **Basic**
 
 4. Wait for the operation to complete.
 
