--- a/Instructions/20533D_LAB_07.md
+++ b/Instructions/20533D_LAB_07.md
@@ -254,7 +254,7 @@ The main tasks for this exercise are as follows:
 
   - Admin user: **Enable** (this allows you to use the registry name as username and admin user access key as password to docker login to the registry)
 
-  - SKU : **Basic (Preview)**
+  - SKU : **Basic**
 
 2. Wait for the operation to complete.
 
