--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -92,6 +92,8 @@
 
 7. Press the **F5** key to execute the command in the script pane.
 
+> **Note**: If you execute the command and it fails, make note of the error message and the directory in which the journal files are located.  Temporary data files are put into the journal file folder with the default path **"%LocalAppData%\Microsoft\Azure\AzCopy** and need to be deleted before running the command again.
+
 8. Examine the output in the console pane and verify that the content of the E:\\Labfiles\\Lab06\\Starter\\asset-images folder was copied to the Azure Storage account container **asset-images**.
 
 9. In the Azure portal, on the storage account blade, click **Overview**.
@@ -199,6 +201,9 @@
 18. In the script pane, paste the content of Clipboard. 
 
 19. In the command line you copied, replace `[drive letter]` with `Z:`.
+
+> **Note**: If your key (password) has a **/** in it, the copy to clipboard will escape this character and replace it with **\/**.  This will cause the command to fail. Correct the escaped characters or copy the key directly from Azure.
+
 
 20. Run the command by pressing the F5 key
 
