Update to navigation steps to the MFA page

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -395,17 +395,31 @@
 
 4. Click **All users**.
 
-5. Click **Multi-Factor Authentication**. This will open another Microsoft Edge tab. If prompted, sign in using the Microsoft account that is the Service Administrator of your subscription.
+5. If the **Multi-Factor Authentication** button appears in the toolbar of the **Users and groups - All users** blade, click **Multi-Factor Authentication**. This will open another Microsoft Edge tab. If prompted, sign in using the Microsoft account that is the Service Administrator of your subscription. Proceed directly to step 13.  
 
-6. On the **multi-factor authentication** page, ensure that the **users** tab is displayed. In the **users** list, select the check box next to **Karen Gruber** and, in the **quick steps** section, click **Enable**. 
+6. If the **Multi-Factor Authentication** button does not appear in the toolbar of the **Users and groups - All users** blade, open another tab of Microsoft Edge and browse to https://manage.windowsazure.com.
 
-7. On the **About enabling multi-factor auth** page, click **enable multi-factor auth**.
+7. If prompted, sign in with the credentials for the Microsoft account that is the Service Administrator of your Azure subscription.
 
-8. On the **Updates successful** page, click **close**.
+8. In the navigation pane, scroll down, and click **ACTIVE DIRECTORY**.
 
-9. Click the user name entry in the upper right corner of the Microsoft Edge window and, in the drop down menu, click **Sign out**.
+9. Click the right arrow next to the **Adatum** directory.
 
-10. Close the Microsoft Edge window, including both tabs.
+10. Click **CONFIGURE**.
+
+11. Under **multi-factor authentication**, click **Manage service settings**.
+
+12. If prompted, sign in with the credentials for the Microsoft account that is the Service Administrator of your Azure subscription.
+
+13. On the **multi-factor authentication** page, ensure that the **users** tab is displayed. In the **users** list, select the check box next to **Karen Gruber** and, in the **quick steps** section, click **Enable**. 
+
+14. On the **About enabling multi-factor auth** page, click **enable multi-factor auth**.
+
+15. On the **Updates successful** page, click **close**.
+
+16. Click the user name entry in the upper right corner of the Microsoft Edge window and, in the drop down menu, click **Sign out**.
+
+17. Close the Microsoft Edge window, including both tabs.
 
 
 #### Task 2: Test Multi-Factor Authentication
