--- a/Instructions/20533D_LAB_AK_11.md
+++ b/Instructions/20533D_LAB_AK_11.md
@@ -9,7 +9,7 @@
 
 2. Start Microsoft Edge and browse to https://portal.azure.com. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
-3. Howver the mouse over the user name entry in the upper right corner of the Azure portal and ensure that you are signed on to the correct subscription. If not, click the user name entry and, in the drop-down menu, click the entry representing the Azure subscription that you chose when running the provisioning script at the beginning of this module. 
+3. Hover the mouse over the user name entry in the upper right corner of the Azure portal and ensure that you are signed on to the correct subscription. If not, click the user name entry and, in the drop-down menu, click the entry representing the Azure subscription that you chose when running the provisioning script at the beginning of this module. 
 
 4. In the hub menu of the Azure portal, click **More services** and then, in the service menu, click **Virtual machines**. On the **Virtual machines** blade, note **20533D1101-vm0** and **20533D1101-vm1** virtual machines with the running status.
 
