--- a/Instructions/20533D_LAB_AK_03.md
+++ b/Instructions/20533D_LAB_AK_03.md
@@ -59,7 +59,7 @@
 
 14. On the Settings blade, click **OK**
 
-15. On the Purchase blade, click **Purchase**.
+15. On the Create blade, click **Create**.
 
 16. Wait for the deployment to complete successfully.
 
@@ -120,8 +120,6 @@
   -  Virtual network/subnet: **20533D0301-labVNet/database**
 
 8. Repeat steps 6 and 7 for the **20533D03labVM2** virtual machine.
-
-9. Close Windows PowerShell ISE.
 
 > **Result**: After completing this exercise, you should have validated the configuration of Azure virtual machines.
 
